Fixed side menubar close button alignment

--- a/static/default_style.css
+++ b/static/default_style.css
@@ -38,7 +38,7 @@
 }
   
 /* position and style the sidenav menu close button (top right corner) */
-.sidenav .closebtn {
+.sidenav .closebutton {
     position: absolute;
     top: 0;
     right: 25px;
@@ -62,16 +62,16 @@
     transition: top 0.3s; /* time to appear/disappear */
 }
 
-#topnavbar a, span{
+#topnavbar a, span, p{
     float: left;
-    display: block;
+    display: flex;
     color: white;
     text-align: center;
     padding: 15px;
     text-decoration: none;
 }
 
-#topnavbar a:hover, span:hover {
+#topnavbar a:hover {
     background-color: #ddd;
     color: black;
     cursor: pointer;
@@ -79,4 +79,12 @@
 
 #appsettings {
     float: right;
+}
+
+#pagetitle {
+    color: white;
+}
+
+#pagesubtitle {
+    color: grey;
 }
